[gd_scene load_steps=3 format=3 uid="uid://boypkfrwjbb6h"]

[ext_resource type="Script" path="res://ui/components/ui_game/UIGamePBox.gd" id="1_7fnq1"]
[ext_resource type="Texture2D" uid="uid://pausm3irrlfp" path="res://ui/components/selector/capsules/cap_white.png" id="1_8adjk"]

[node name="UIGamePBox" type="VBoxContainer"]
offset_right = 281.0
offset_bottom = 50.0
scale = Vector2(1.5, 1.5)
script = ExtResource("1_7fnq1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="player_avatar" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
texture = ExtResource("1_8adjk")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="player_name" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "12345678911234567892"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="player_color" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(23, 10)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="player_score" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Score: 00"

[node name="remaining_capsules" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Capsules: 00"
